kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/typechecher_tests/invalid/parserError08.kmt
/* $Id: parserError08.kmt,v 1.2 2008-04-14 08:50:09 dvojtise Exp $
 * Creation date: January 10, 2008
 * License:
 * Copyright:
 * Authors:
 *  the parser must fail on that file
 * see bug #4768
 * introduce a parser error  between using and class
 */



package root_package;




require kermeta

using kermeta::language::structure
using kermeta::standard


ggg

class Main 
{
	operation main () : Void is do 
	end
}
